--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon --exec babel-node app.js",
+    "dev": "nodemon --exec babel-node app.js --ignore public/uploads/",
     "start": "babel-node app.js"
   },
   "author": "",
