--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "mongoose": "^5.4.15",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "rimraf": "^2.6.3",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
