--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
+    "klaw-sync": "^6.0.0",
     "mongoose": "^5.4.15",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
